<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">陌缘</string>
    <string name="submit_toolbar">提交</string>
    <string name="title_shenbian">身边</string>
    <string name="title_haoyou">好友</string>
    <string name="title_xiaoxi">消息</string>
    <string name="title_dongtai">动态</string>
    <string name="title_wode">我的</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_activity_main4">Main4Activity</string>
    <string name="title_activity_main5">Main5Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="media_picker_select_from">选择:</string>
    <string name="media_picker_camera">相机</string>
    <string name="media_picker_gallery">相册</string>
    <string name="media_picker_ok">同意</string>
    <string name="media_picker_cancel">取消</string>
    <string name="media_picker_some_permission_is_denied">某些授权被拒绝</string>
    <string name="media_picker_you_need_to_grant_access_to">您需要授权可调用</string>
    <string name="media_picker_read_Write_external_storage"><![CDATA[读写外部储存器]]></string>
    <string name="title_activity_personage">PersonageActivity</string>

    <string-array name="age">
        <!--        <item>15</item>-->
        <!--        <item>16</item>-->
        <!--        <item>17</item>-->
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
    </string-array>
    <string-array name="selected_age">
        <item>不限</item>
        <!--        <item>15</item>-->
        <!--        <item>16</item>-->
        <!--        <item>17</item>-->
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
    </string-array>
    <string-array name="sousuo_age">
        <item>不限</item>
        <!--        <item>15</item>-->
        <!--        <item>16</item>-->
        <!--        <item>17</item>-->
        <item>18-20</item>
        <item>21-25</item>
        <item>26-30</item>
        <item>31-40</item>
        <item>41-60</item>
    </string-array>
</resources>
